--- a/styles/default.css
+++ b/styles/default.css
@@ -1,5 +1,6 @@
 
-* { cursor: none; }
+*, html { cursor: none !important; }
+html, body { height: 100%; }
 
 body {
     -webkit-touch-callout: none;
@@ -23,19 +24,6 @@ body {
     pointer-events: none;
     z-index: 99;
 }
-
-/*
-#test::before {
-    content: "hello ";
-    display: block;
-    position: absolute;
-    top: 0; left: 0; bottom: 0; right: 0; 
-    background: linear-gradient(rgba(18, 16, 16, 0) 50%, rgba(0, 0, 0, 0.25) 50%), 
-                linear-gradient(90deg, rgba(255, 0, 0, 0.06), rgba(0, 255, 0, 0.02), rgba(0, 0, 255, 0.06)); 
-    background-size: 100% 3px, 3px 100%; 
-    pointer-events: none;
-}
-*/
 
 main::before {
     position: absolute;
