Added some quick 3D stars, must make them span the whole screen later

--- a/styles/default.css
+++ b/styles/default.css
@@ -81,7 +81,7 @@ main::before {
 }
 
 #window {
-    background-color: white;
+    background-color: black;
     position: absolute;
     width: 600px;
     height: 400px;
